--- a/pages/Accueil.html
+++ b/pages/Accueil.html
@@ -30,31 +30,31 @@
         <div id="fonctionnement">
             <ol>
                 <li><i class="fas fa-mobile-alt"></i><a href="#">Choisissez un restaurant</a></li>
-                <li><i class="fas fa-list-ul"></i><a href="#">Comoser votre menu</a></li>
+                <li><i class="fas fa-list-ul"></i><a href="#">Composez votre menu</a></li>
                 <li><i class="fas fa-store"></i><a href="#">Dégustez au restaurant</a></li>
             </ol>
         </div>
         <div id="restaurant">
             <div class="item">
-                <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette de gout" title="palette de gout" />
+                <a href="../pages/La palette de gout.html"> <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette de gout" title="palette de gout" /></a>
                 <p>La palette du goût</p>
                 <span>Ménilmontant</span>
                 <i class="fas fa-heart"></i>
             </div>
             <div class="item">
-                <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée" />
+                <a href="../pages/La note enchantée.html"><img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée" /></a>
                 <p>La note enchantée</p>
                 <span>Charonne</span>
                 <i class="fas fa-heart"></i>
             </div>
             <div class="item">
-                <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française" />
+                <a href="../pages/A la francaise.html"> <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française" /></a>
                 <p>À la française</p>
                 <span>Cité rouge</span>
                 <i class="fas fa-heart"></i>
             </div>
             <div class="item">
-                <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens" />
+                <a href="../pages/Le délice des sens.html"><img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens" /></a>
                 <p>Le délice des sens</p>
                 <span>Folie-Méricourt</span>
                 <i class="fas fa-heart"></i>
