--- a/pages/La note enchantée.html
+++ b/pages/La note enchantée.html
@@ -14,25 +14,91 @@
     <div id="Bloc-page">
         <header>
             <div id="titre-principal">
-                <img src="../images/logo/ohmyfood.png" alt="logo-ohmyfood" />
+                <a href="../pages/Accueil.html"> <i class="fas fa-arrow-left"></i> </a><img src="../images/logo/ohmyfood.png" alt="logo-ohmyfood" />
             </div>
         </header>
-
-        <body>
-
-
-
-            <footer>
+        <div class="image-entete">
+            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée" />
+            <h1>La note enchantée</h1>
+            <div class="entrées">
+                <span>ENTREES</span>
                 <div>
-                    <h2>ohmyfood</h2>
-                    <ul>
-                        <li> <i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                        <li><i class="fas fa-hands-helping"></i> <a href="#">Devenir partenaire</a> </li>
-                        <li><a href="#">Mentions Légales</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-
+                    <h2>Ravioles de foie gras</h2>
+                    <span>Accompagnés de leur créme à la truffe</span>
+                    <span>25€</span>
                 </div>
-            </footer>
+                <div>
+                    <h2>Caviar osciétre</h2>
+                    <span>Sur blini à la farine de blé noir</span>
+                    <span>35€</span>
+                </div>
+                <div>
+                    <h2>Homard et espuma de ...</h2>
+                    <span>Mariné aux zests d'orange</span>
+                    <span>20€</span>
+                </div>
+                <div>
+                    <h2>Foie gras de canard cuit entier</h2>
+                    <span>Confiture de figue et pain toasté</span>
+                    <span>35€</span>
+                </div>
+            </div>
+            <div class="Plats">
+                <span>PLATS</span>
+                <div>
+                    <h2>Noix de coquilles Saint-Jacques</h2>
+                    <span>Sur lit de puée de céleri-rave</span>
+                    <span>40€</span>
+                </div>
+                <div>
+                    <h2>Langoustine poélée</h2>
+                    <span>Purée de patate douce</span>
+                    <span>35€</span>
+                </div>
+                <div>
+                    <h2>Mijoté de queue de boeuf</h2>
+                    <span>Et riz sauvage aux zests de citron</span>
+                    <span>44€</span>
+                </div>
+
+            </div>
+            <div class="DESSERTS">
+                <span>DESSERTS</span>
+                <div>
+                    <h2>Macaron noisette et chocolat</h2>
+                    <span>Glace au caramel brun et sel de Guérande</span>
+                    <span>18€</span>
+                </div>
+                <div>
+                    <h2>Baba au rhum revisité</h2>
+                    <span>Avec son coulis de citron</span>
+                    <span>22€</span>
+                </div>
+                <div>
+                    <h2>Tarte au citrron meringuée</h2>
+                    <span>Destructurée</span>
+                    <span>23€</span>
+                </div>
+
+            </div>
+            <div class="Commander"><span>Commander</span></div>
+        </div>
+
+</body>
+
+
+
+<footer>
+    <div>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li> <i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+            <li><i class="fas fa-hands-helping"></i> <a href="#">Devenir partenaire</a> </li>
+            <li><a href="#">Mentions Légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+
+    </div>
+</footer>
 
 </html>
