--- a/pages/Le délice des sens.html
+++ b/pages/Le délice des sens.html
@@ -14,25 +14,89 @@
     <div id="Bloc-page">
         <header>
             <div id="titre-principal">
-                <img src="../images/logo/ohmyfood.png" alt="logo-ohmyfood" />
+                <a href="../pages/Accueil.html"> <i class="fas fa-arrow-left"></i> </a><img src="../images/logo/ohmyfood.png" alt="logo-ohmyfood" />
             </div>
         </header>
+        <div class="image-entete">
+            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens" />
+            <h1>Le delices des sens</h1>
+        </div>
+        <div class="entrées">
+            <span>ENTREES</span>
+            <div>
+                <h2>Tartare de thon</h2>
+                <span>Assaisonné yuzu</span>
+                <span>25€</span>
+            </div>
+            <div>
+                <h2>Bouchée de homard croustillant</h2>
+                <span>Et sa farandole de petits légumes</span>
+                <span>35€</span>
+            </div>
+            <div>
+                <h2>Velouté de cépes</h2>
+                <span>Aux truffes</span>
+                <span>20€</span>
+            </div>
+        </div>
+        <div class="Plats">
+            <span>PLATS</span>
+            <div>
+                <h2>Poulet roti aux herbes de provence</h2>
+                <span>Et sa Créme de truffe</span>
+                <span>40€</span>
+            </div>
+            <div>
+                <h2>Langouste rotie</h2>
+                <span>Et ses légumes de saison</span>
+                <span>35€</span>
+            </div>
+            <div>
+                <h2>Cote de bouef angus</h2>
+                <span>Et sa purée de panais</span>
+                <span>44€</span>
+            </div>
 
-        <body>
+        </div>
+        <div class="DESSERTS">
+            <span>DESSERTS</span>
+            <div>
+                <h2>Farandole de desserts</h2>
+                <span>Du chef</span>
+                <span>18€</span>
+            </div>
+            <div>
+                <h2>Créme brulée</h2>
+                <span>Revisité</span>
+                <span>22€</span>
+            </div>
+            <div>
+                <h2>Tiramisu</h2>
+                <span>A la noisette</span>
+                <span>23€</span>
+            </div>
+
+        </div>
+        <div class="Commander"><span>Commander</span></div>
+    </div>
+
+    </div>
+
+</body>
 
 
 
-            <footer>
-                <div>
-                    <h2>ohmyfood</h2>
-                    <ul>
-                        <li> <i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                        <li><i class="fas fa-hands-helping"></i> <a href="#">Devenir partenaire</a> </li>
-                        <li><a href="#">Mentions Légales</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+<footer>
+    <div>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li> <i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+            <li><i class="fas fa-hands-helping"></i> <a href="#">Devenir partenaire</a> </li>
+            <li><a href="#">Mentions Légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
 
-                </div>
-            </footer>
+    </div>
+</footer>
 
 </html>
