--- a/Le_delice_des_sens.html
+++ b/Le_delice_des_sens.html
@@ -25,7 +25,7 @@
     <div id="Bloc-page">
         <header>
             <div id="titre-principal">
-                <a href="Accueil.html"> <i class="fas fa-arrow-left"></i> </a><img src="images/logo/ohmyfood.png" alt="logo-ohmyfood" />
+                <a href="index.html"> <i class="fas fa-arrow-left"></i> </a><img src="images/logo/ohmyfood.png" alt="logo-ohmyfood" />
             </div>
         </header>
         <div class="image-entete">
