--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8" />
@@ -26,11 +26,11 @@
             <div id="titre-principal">
                 <img src="images/logo/ohmyfood.png" alt="logo-ohmyfood" />
             </div>
-
             <div class="localisation">
                 <form method="post" action="#">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="text" name="recherche" id="recherche" placeholder="Paris,Belleville" />
+                </form>
             </div>
         </header>
         <div id="explorer">
@@ -120,7 +120,7 @@
         </footer>
         <div class="spinloader spinloader--full-height"></div>
 
-
+    </div>
 </body>
 
 </html>
