--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                 <div class="footer__logo"> <img src="images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood" /></div>
                 <div class="footer__url">
                     <ul class="footer__url__list">
-                        <li> <a href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
+                        <li> <a href="javascript:void(0)"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
                         <li>
-                            <a href="#"></a><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
+                            <a href="javascript:void(0)"></a><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
                         </li>
-                        <li><a href="#">Mentions Légales</a></li>
+                        <li><a href="javascript:void(0)">Mentions Légales</a></li>
                         <li><a href="mailto:test@test.local">Contact</a></li>
                     </ul>
                 </div>
