--- a/A_la_francaise.html
+++ b/A_la_francaise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 
 <head>
@@ -149,30 +149,30 @@
         <div class="Commander"><span>Commander</span></div>
     </div>
 
-
-
-
-
     <footer>
         <div class="footer">
-            <div class="footer__logo"> <img src="images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood" /></div>
+            <div class="footer__logo"> <img src="images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood" />
+            </div>
             <div class="footer__url">
                 <ul class="footer__url__list">
-                    <li> <a href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
                     <li>
-                        <a href="#"></a><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
+                        <a href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a>
                     </li>
-                    <li><a href="#">Mentions Légales</a></li>
-                    <li><a href="mailto:test@test.local">Contact</a></li>
+                    <li>
+                        <a href="#"><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
+                    </li>
+                    <li>
+                        <a href="#">Mentions Légales</a>
+                    </li>
+                    <li>
+                        <a href="mailto:test@test.local">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </footer>
     <div class="spinloader spinloader--full-height">
-
     </div>
-
-
 </body>
 
 </html>
