--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 
 <head>
@@ -158,7 +158,7 @@
         </div>
         <div class="Commander"><span>Commander</span></div>
     </div>
-    </div>
+
 
 
 
@@ -170,7 +170,7 @@
                 <ul class="footer__url__list">
                     <li> <a href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
                     <li>
-                        <a href="#"></a><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
+                        <a href="#"><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
                     </li>
                     <li><a href="#">Mentions Légales</a></li>
                     <li><a href="mailto:test@test.local">Contact</a></li>
